Archive2/7a/4c3d9554e66cc6/output/output
main.cpp:3:16: error: unknown type name 'Vec3'
        Camera(Vec3<double> eyePos, Vec3<double> lookAt, Vec3<double> up, float viewPlaneDistance) restrict(cpu, amp) :
               ^
main.cpp:3:20: error: expected ')'
        Camera(Vec3<double> eyePos, Vec3<double> lookAt, Vec3<double> up, float viewPlaneDistance) restrict(cpu, amp) :
                   ^
main.cpp:3:15: note: to match this '('
        Camera(Vec3<double> eyePos, Vec3<double> lookAt, Vec3<double> up, float viewPlaneDistance) restrict(cpu, amp) :
              ^
main.cpp:3:99: error: expected ';' at end of declaration list
        Camera(Vec3<double> eyePos, Vec3<double> lookAt, Vec3<double> up, float viewPlaneDistance) restrict(cpu, amp) :
                                                                                                  ^
                                                                                                  ;
main.cpp:26:9: error: unknown type name 'Vec3'
        Vec3<double> eyePos;
        ^
main.cpp:26:13: error: expected member name or ';' after declaration specifiers
        Vec3<double> eyePos;
        ~~~~^
main.cpp:27:9: error: unknown type name 'Vec3'
        Vec3<double> lookAt;
        ^
main.cpp:27:13: error: expected member name or ';' after declaration specifiers
        Vec3<double> lookAt;
        ~~~~^
main.cpp:28:9: error: unknown type name 'Vec3'
        Vec3<double> up;
        ^
main.cpp:28:13: error: expected member name or ';' after declaration specifiers
        Vec3<double> up;
        ~~~~^
9 errors generated.
